# p4-lsp

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  grammar.js  rules.ron
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  test.yml
docs/architecture/: architecture.puml  target_architecture.puml
docs/logo/: p4lsp-logo.key
docs/plugins/: p4test_sequence.puml
examples/: basic.p4  core.p4  firewall.p4  struct.p4  t.p4  test.p4
grammar/: spec.bnf
include/: core.p4
language-server-p4/: Cargo.toml
language-server-p4/language_def/: rules.ron
language_def/: rules.ron
ls_framework/: Cargo.toml
ls_framework/src/: file.rs  file_graph.rs  language_def.rs  language_server.rs  lib.rs  lsp_mappings.rs  settings.rs  utils.rs  workspace.rs
ls_framework/src/features/: completion.rs  goto.rs  hover.rs  rename.rs  semantic_tokens.rs
ls_framework/src/features/diagnostics/: mod.rs  parse.rs
ls_framework/src/metadata/: ast_manager.rs  mod.rs  st_manager.rs  symbol_table.rs  types.rs
ls_framework/src/metadata/ast/: mod.rs  rules_translator.rs  tree.rs
ls_framework/src/plugin_manager/: manager.rs  mod.rs  notification.rs
ls_framework/src/plugin_manager/host_functions/: host_command.rs
p4_lsf/: Cargo.toml
p4_lsf/language_def/: rules.ron
p4_lsf/src/: main.rs
plugin/p4test/: Cargo.toml
plugin/p4test/src/: main.rs
plugin/petr4/: Cargo.toml
plugin/petr4/src/: lib.rs  main.rs
plugin/test_plugin/: Cargo.toml
plugin/test_plugin/src/: lib.rs
src/: cache.rs  completion.rs  file.rs  file_tree.rs  hover.rs  main.rs  nodes.rs  notification.rs  scope_tree.rs  scopes.rs  settings.rs  symbol_table.rs  utils.rs  workspace.rs
src/analysis/: analysis.rs  mod.rs
src/analysis/internal/: mod.rs  parse.rs
src/ast/: mod.rs  translator.rs  tree.rs
src/features/: completion.rs  goto.rs  hover.rs  mod.rs  petr4.rs  rename.rs  semantic_tokens.rs
src/features/diagnostics/: diagnostics.rs  mod.rs  parse.rs  provider.rs  symbol.rs
src/features/diagnostics/internal/: mod.rs  parse.rs  symbols.rs
src/metadata/: ast_manager.rs  metadata.rs  mod.rs  st_manager.rs  symbol_table.rs  types.rs
src/metadata/ast/: mod.rs  rules_translator.rs  t.rs  translator.rs  tree.rs
src/plugin_manager/: manager.rs  mod.rs  notification.rs
src/plugin_manager/host_functions/: helloworld.rs  host_command.rs  mod.rs
src/scope_parser/: items.rs  scope_tree.rs
src/scope_tree/: items.rs  mod.rs  scope_tree.rs  variables.rs
src/symbols/: constant.rs  function.rs  mod.rs  table.rs  type.rs  variable.rs
tools/: follow.py
