[package]
name = "p4_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tower-lsp = "0.18.0"
tree-sitter-p4 = {git = "ssh://git@github.com/ace-design/tree-sitter-p4.git"}
