[package]
name = "p4_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
indextree = "4.5.0"
lazy_static = "1.4.0"
regex = "1.7.2"
serde = "1.0.152"
serde_json = "1.0.93"
simple-log = "1.6.0"
time = "0.3.20"
tokio = { version = "1.25.0", features = ["full"] }
tower-lsp = "0.18.0"
tree-sitter = "0.20.9"
tree-sitter-p4 = {git = "https://github.com/ace-design/tree-sitter-p4"}
