[package]
name = "p4_lsf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ls_framework = { path = "../ls_framework" }
tokio = "1.29.1"
tree-sitter-p4 = {git = "https://github.com/ace-design/tree-sitter-p4"}
